# onedal_simple

./: .gitignore  CMakeLists.txt  CSPureLibSimple.code-workspace  CSPureLibSimpleConsoleConsumer.sln  CSTestNativeLib.sln  KNNAlgorithm.cpp  KNNAlgorithm.h  Makefile  Nuget.config  Program.cs  README.md  XgbLibimport.sln  build.ps1  build.sh  function.cpp  function.h  install_onedal_ubuntu.sh  program.cpp  run.sh  test_knn.cpp  xgboost_proto.sln
.devcontainer/: devcontainer.json
CSPureLibSimple/: CSPureLibSimple.csproj  Evaluator.cs
CSPureLibSimpleConsoleConsumer/: CSPureLibSimpleConsoleConsumer.csproj  Program.cs  nuget.config
CSPureLibSimpleUnitTests/: CSPureLibSimpleUnitTest1.cs  CSPureLibSimpleUnitTests.csproj
CSTestLib/: CSTestLib.csproj  Calculator.cs
CSTestLibConsole/: CSTestLibConsole.csproj  Program.cs
CSTestLibUnitTests/: CSTestLibUnitTest1.cs  CSTestLibUnitTests.csproj
MLNetStandalone/: Program.cs
Native/: CMakeLists.txt  KNNAlgorithm.h  TestNative.nuspec  build.ps1  build.sh  function.h  function_nodal.cpp  function_nodal.h  program_nodal.cpp  test_knn.cpp
NativeSimple/: CMakeLists.txt
NativeSimple/include/: lib.hpp
NativeSimple/src/: lib.cpp
OneDALStandalone/: CMakeLists.txt  README.md  build.ps1  config.h.in  function.cpp  function.hpp  program.cpp
UsingLibImport/: Program.cs  UsingLibImport.csproj
XgbLibimport/: InternalRegressionTree.cs  InternalTreeEnsemble.cs  WrappedXGBoostInterface.cs  WrappedXGBooster.cs  WrappedXGDMatrix.cs  XGBoostInterface.cs  XGBoostUtils.cs  XgbLibimport.csproj  XgbRegressionTrainer.cs  XgbTrainerArguments.cs  XgbTrainerBase.cs
XgbLibimportConsole/: Program.cs  README.md  XgbLibimportConsole.csproj
XgbLibimportConsole/Properties/: launchSettings.json
XgbLibimportTests/: UnitTest1.cs  XgbLibimportTests.csproj
data/: booster_config_sample.json
utils/: prepare_data.py
xgboost_proto/: WrappedXGBoostInterface.cs  WrappedXGBoostTraining.cs  WrappedXGBooster.cs  WrappedXGDMatrix.cs  XGBoostBinaryClassifierEstimator.cs  XGBoostInterface.cs  XGBoostTrainerBase.cs  xgboost_proto.csproj
xgboost_proto_test/: README.md  TestUtils.cs  UnitTest.cs  xgboost_proto_test.csproj
xgboost_proto_test_support/: EnvironmentSpecificFactAttribute.cs  NotArm32FactAttribute.cs  README.md  xgboost_proto_test_support.csproj
